--- a/index.html
+++ b/index.html
@@ -12,10 +12,16 @@
     </header>
     <section>
         <div>
-            Teste...
+            <label for="inicio">Início: </label>
+            <input type="number" name="inicio" id="iinicio">
         </div>
         <div>
-            Oi oi
+            <label for="fim">Fim:</label>
+            <input type="number" name="fim" id="ifim">
+        </div>
+        <div>
+            <label for="passo">Passo:</label>
+            <input type="number" name="passo" id="ipasso">
         </div>
     </section>
     <footer>
